[gd_scene load_steps=3 format=2]

[ext_resource path="res://Console/ConsoleGUI.gd" type="Script" id=1]
[ext_resource path="res://Font/Arial_Console.tres" type="DynamicFont" id=2]

[node name="ConsoleGUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 1017.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 586.0
margin_bottom = 971.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CmdHistory" type="RichTextLabel" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 586.0
margin_bottom = 971.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
scroll_following = true

[node name="CmdLine" type="LineEdit" parent="PanelContainer/VBoxContainer"]
margin_top = 975.0
margin_right = 586.0
margin_bottom = 1010.0
custom_colors/font_color = Color( 0, 1, 0.117647, 1 )
custom_fonts/font = ExtResource( 2 )
caret_blink = true
caret_blink_speed = 0.5

[connection signal="text_entered" from="PanelContainer/VBoxContainer/CmdLine" to="." method="_on_CmdLine_text_entered"]
